--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     max-width: 800px;
     margin: 0px auto;
     line-height: 1.8;
+    scroll-behavior: smooth;
 }
 
 /* Container styling for layout */
@@ -66,4 +67,18 @@ button:active{
     border-radius: 4px;
     pointer-events: none; /* Prevent tooltip from interfering with mouse events */
     font-size: 12px;
+}
+
+h4 {
+    color: crimson;
+}
+
+
+a {
+    color: crimson;
+ 
+}
+    
+a:visited { 
+    color: crimson;
 }
